# Ling-Pet

./: .gitignore  AGENTS.md  API_REFERENCE.md  AUTO_BUILD_COMPLETE.md  AUTO_CLEANUP_TEST_GUIDE.md  BACKEND_AND_TOOLCHAIN_ENHANCEMENT.md  BILIBILI_EMOJI_BACKEND_COMPLETE.md  BILIBILI_EMOJI_DEBUG_COMPLETE.md  BILIBILI_EMOJI_DOCS_INDEX.md  BILIBILI_EMOJI_FINAL_REPORT.md  BILIBILI_EMOJI_FIX_V2.0.1.md  BILIBILI_EMOJI_PLUGIN_CHECK.md  BILIBILI_EMOJI_V2_COMPLETE.md  BILIBILI_EMOJI_V3_CHECKLIST.md  BILIBILI_EMOJI_V3_COMPLETE.md  BILIBILI_EMOJI_V3_QUICKSTART.md  BILIBILI_EMOJI_V3_SUMMARY.md  BILIBILI_EMOJI_V3_TEST_GUIDE.md  BILIBILI_EMOJI_V3_UPGRADE_GUIDE.md  BUG_FIXES_SUMMARY.md  CHANGELOG.md  CLEANUP_REPORT.md  COMPONENT_INJECTION_COMPLETE.md  COMPONENT_RENAME_SUMMARY.md  CROSS_WINDOW_PLUGIN_SOLUTION.md  CROSS_WINDOW_PLUGIN_SYNC.md  CROSS_WINDOW_SYNC_TEST.md  DOCS_CONSOLIDATION_PLAN.md  DOCS_CONSOLIDATION_REPORT.md  DOCS_SIMPLIFIED.md  DOCS_SUMMARY.md  DOM_INJECTION_API.md  DYNAMIC_PLUGIN_PAGES.md  EMOJI_FILE_FIX_REPORT.md  EMOJI_FIX_TEST.md  FINAL_ANSWER.md  FINAL_SOLUTION_SUMMARY.md  FINAL_STATUS.md  FIXED_PET_README.md  HOOK_TEST_DELIVERY.md  (+49 more)
.github/prompts/: 简洁代码.prompt.md
docs/: DYNAMIC_INJECTION_SOLUTION.md  conversation-architecture.md  invoke-llm-plan.md  llm-tools-system.md  notification-feature-plan.md  overall.md  plugin-architecture-complete.md  plugin-architecture-visual.md  plugin-architecture.md  plugin-backend-implementation.md  plugin-communication.md  plugin-development-guide.md  plugin-loader-final-architecture.md  plugin-loader-production-architecture.md  plugin-runtime-architecture.md  plugin-system-overview.md  prompt-design.md  schedule.md
pluginLoader/: .gitignore  BUILD_AND_DEPLOY.md  BUILD_TOOLS_COMPLETE.md  DEBUG_CHEATSHEET.md  MACOS_SUPPORT.md  PET_TOOL_SYSTEM_COMPLETE.md  QUICK_REFERENCE.md  README-ENHANCED.md  README.md  example-usage.ts  init.ts  tsconfig.json
pluginLoader/components/: PluginNavigation.vue  PluginPageContainer.vue  PluginPageWrapper.vue
pluginLoader/core/: backendLoader.ts  componentDiscovery.ts  componentInjection.ts  componentWrapper.ts  debugConsole.ts  domInjection.ts  dynamicPageLoader.ts  enhancedPluginLoader.ts  hookEngine.ts  hotReload.ts  index.ts  localComponentHook.ts  packageManager.ts  pathResolver.ts  petLLMIntegration.ts  petToolManager.ts  pluginApi.js  pluginApi.ts  pluginCommunication.ts  pluginComponentRegistry.ts  pluginLoader.ts  pluginPageManager.ts  pluginRuntime.ts  runtimeInjection.ts  storageManager.ts  toolManager.ts  vueInstanceInterceptor.ts  vuePlugin.ts
pluginLoader/docs/: BUILD_GUIDE.md  CROSS_PLATFORM_BUILD.md  PET_TOOL_QUICKSTART.md  PET_TOOL_SYSTEM.md  PET_TOOL_USAGE_EXAMPLE.md  PLUGIN_SETTINGS_API.md  PLUGIN_UNIVERSAL_API.md
pluginLoader/examples/: pet-tool-integration.ts
pluginLoader/plugins/bilibili-emoji/backend/: Cargo.toml  README.md
pluginLoader/plugins/bilibili-emoji/backend/src/: lib.rs
pluginLoader/test/: pathResolver.test.ts  storageManager.test.ts
pluginLoader/tools/: CHEATSHEET.md  CHECKLIST.md  FINAL_SUMMARY.md  INDEX.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  USAGE_EXAMPLES.md  build-all.cjs  build-and-package.cjs  build-plugin.cjs  compiler.cjs  dev-watch.cjs  packager.cjs  plugin-cli.js  symbolScanner.ts  tasks.cjs
pluginLoader/types/: api.js  api.ts
public/default_emotion_pack/: color.json  config.json
scripts/: setup-live2d.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  mouse_hook.rs  notification.rs  plugin_backend_enhanced.rs  plugin_backend_manager.rs  plugin_config.rs  plugin_manager.rs  sbv2_manager.rs  system_tray.rs  uiohook_manager.rs
src-tauri/src/os/: macos.rs  windows.rs
src/composables/: useDownloader.ts  useStreamConversation.ts
src/constants/: ai.ts  emotionColors.ts  emotions.ts  settings-ui.ts  settings_default.ts  xp.ts
src/pages/: ChatBubblePage.vue  ChatHistoryPage.vue  LingChatPage.vue  MainPage.vue  NotificationPage.vue  SettingsPage.vue
(+161 files in other folders)
