[package]
name = "lingpet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lingpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api", "image-png", "devtools", "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-pinia = "3"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-http = "2"
tauri-plugin-screenshots = "2.2.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"
objc-foundation = "0.1"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.
