[package]
name = "bilibili-emoji-backend"
version = "2.0.0"
edition = "2021"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.4"
urlencoding = "2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
